finish lecture05